<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/screen_background"
    android:padding="20dp"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/button_pressed"
            android:textSize="30sp"
            android:textColor="@color/white"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:paddingVertical="15dp"
            android:orientation="horizontal"
            android:weightSum="5">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/_1"
                android:textSize="25sp"
                android:textColor="@color/white"
                android:background="@drawable/button_background"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/_2"
                android:textSize="25sp"
                android:textColor="@color/white"
                android:background="@drawable/button_background"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button3"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/_3"
                android:textSize="25sp"
                android:textColor="@color/white"
                android:background="@drawable/button_background"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button4"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/_4"
                android:textSize="25sp"
                android:textColor="@color/white"
                android:background="@drawable/button_background"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button5"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/_5"
                android:textSize="25sp"
                android:textColor="@color/white"
                android:background="@drawable/button_background"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:paddingVertical="15dp"
            android:orientation="horizontal"
            android:weightSum="5">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button6"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/_6"
                android:textSize="25sp"
                android:textColor="@color/white"
                android:background="@drawable/button_background"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button7"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/_7"
                android:textSize="25sp"
                android:textColor="@color/white"
                android:background="@drawable/button_background"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button8"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/_8"
                android:textSize="25sp"
                android:textColor="@color/white"
                android:background="@drawable/button_background"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button9"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/_9"
                android:textSize="25sp"
                android:textColor="@color/white"
                android:background="@drawable/button_background"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button10"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/_10"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:background="@drawable/button_background"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:paddingVertical="15dp"
            android:orientation="horizontal"
            android:weightSum="5">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button11"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/_11"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:background="@drawable/button_background"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button12"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/_12"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:background="@drawable/button_background"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button13"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/_13"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:background="@drawable/button_background"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button14"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/_14"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:background="@drawable/button_background"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button15"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/_15"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:background="@drawable/button_background"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:paddingVertical="15dp"
            android:orientation="horizontal"
            android:weightSum="5">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button16"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/_16"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:background="@drawable/button_background"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button17"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/_17"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:background="@drawable/button_background"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button18"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/_18"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:background="@drawable/button_background"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button19"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/_19"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:background="@drawable/button_background"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button20"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/_20"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:background="@drawable/button_background"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:paddingVertical="15dp"
            android:orientation="horizontal"
            android:weightSum="5">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button21"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/_21"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:background="@drawable/button_background"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button22"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/_22"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:background="@drawable/button_background"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button23"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/_23"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:background="@drawable/button_background"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button24"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/_24"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:background="@drawable/button_background"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button25"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/_25"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:background="@drawable/button_background"/>
        </LinearLayout>
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_back"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_margin="5dp"
        android:text="@string/back"
        android:textColor="@color/white"
        android:background="#0022FF"/>
</LinearLayout>
